Add changelog in update embeds